@@ -1,5 +1,10 @@
 2016-01-30  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
 
+	* rt/Makefile (CFLAGS-mq_timedreceive.c): New flag.
+	* sysdeps/unix/sysv/linux/mq_timedreceive.c: New file.
+	* sysdeps/unix/sysv/linux/syscalls.list (mq_timedreceive): Remove
+	from auto-generation list.
+
 	* sysdeps/unix/sysv/linux/Makefile (sysdep_routines): Add
 	open_by_handle_at.
 	(CFLAGS-open_by_handle_at.c): New flag.
